--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "who",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,14 +9,19 @@
     "prod": "next export"
   },
   "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@headlessui/react": "^1.4.1",
     "autoprefixer": "^10.3.4",
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "reset-css": "^5.0.1",
+    "sass": "^1.41.0",
     "tailwindcss": "^2.2.15",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.21"
