--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@babel/core": "^7.15.5",
     "@headlessui/react": "^1.4.1",
+    "ansi-regex": "^6.0.1",
     "autoprefixer": "^10.3.4",
+    "eslint": "^7.32.0",
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
-    "ansi-regex": "^6.0.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
