--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start -p $PORT",
     "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "next export"
+    "prod": "next export",
+    "lint": "next lint"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
@@ -27,7 +28,9 @@
     "useragent": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.27"
+    "@types/react": "^17.0.27",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   },
   "engines": {
     "node": ">=v14.17.3"
