--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "autoprefixer": "^10.3.4",
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
-    "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reset-css": "^5.0.1",
@@ -29,7 +28,8 @@
   "devDependencies": {
     "@types/react": "^17.0.27",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11"
   },
   "engines": {
     "node": ">=v14.17.3"
