--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.4.1",
     "ansi-regex": "^6.0.1",
     "autoprefixer": "^10.3.4",
+    "google-maps-react": "^2.0.6",
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
     "react": "^17.0.2",
