--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ionicons": "^4.2.0",
     "reset-css": "^5.0.1",
