Navbar fully responsive + Updated Tailwind components

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,7 @@ NEXT_PUBLIC_SERVER_PRODUCTION=
 NEXT_PUBLIC_SERVER_DEV=
 NEXT_PUBLIC_SERVER_LOCAL=
 NEXT_PUBLIC_APIKEY_GOOGLE=
+CLOUDINARY_CLOUDNAME=
+CLOUDINARY_APIKEY=
+CLOUDINARY_APISECRET=
+CLOUDINARY_URL=
